Pushed frontend to github

--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -1,17 +1,4 @@
-# Backend
-
-# env
-.env*
-.env*.local
-
-# venv
-.venv
-venv
-
-#python
-*.pyc
-
-# Frontend
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
